# tsoft-software-apr

./: .gitignore  pylintrc  pyproject.toml
app/: __init__.py  db.py
app/domain/account/: constants.py  exceptions.py
app/domain/account/mixins/: account.py  water_meter.py
app/domain/etd/constants/: document.py  signer.py
app/domain/etd/mixins/: etd.py  fac.py  set.py  signable.py  signer.py
app/domain/etd/mixins/document/: __init__.py  comissions.py  detail.py  glob_dsc_sur.py  references.py  sub_totals.py
app/domain/etd/mixins/document/header/: __init__.py  id.py  issuer.py  receptor.py  totals.py
app/domain/etd/reports/: constants.py  pdf_other_charge.py  pdf_water_charge.py  utils.py
app/domain/etd/reports/setup/: __init__.py  fonts.py  paragraph_styles.py
app/domain/etd/sender/: constants.py  etds.py  exceptions.py  vouchers.py
app/domain/finance/: constants.py
app/domain/finance/mixins/: balance.py  charge.py  extras.py  movements.py  renegotiation.py  transaction.py
app/domain/service/mixins/: service.py
app/domain/shared/: constants.py
app/domain/shared/mixins/: action.py  activable.py  address.py  base.py
app/domain/user/: constants.py
app/domain/user/mixins/: ability.py  auth.py  identity.py  relationship.py  role.py  user.py
app/models/: service.py  user.py
app/models/account/: account.py  water_meters.py
app/models/finance/: balance.py  charge.py  extras.py  renegotiation.py  transaction.py
app/models/mixins/: query.py
app/models/secondaries/: account.py  charge.py  etd.py  renegotiation.py  shared.py  user.py  water_meter.py
app/models/shared/: action.py  activable.py  address.py  base.py
app/utils/: formaters.py  loaders.py  validators.py
config/: __init__.py  logger.py
script/: run.py
