[tool.poetry]
name = "tsfot-software-apr"
version = "0.1.0"
description = "Web application to administrate a water distribution facility, with a personal and administrative panel in charge of emiting tributary documentation."
authors = ["Sebastian Salinas <seba.salinas.delrio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.2.2"
jwt = "^1.3.1"
bcrypt = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-regressions = "^2.3.1"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
