[tool.poetry]
name = "tsfot-software-apr"
version = "0.1.0"
description = "Web application to administrate a water distribution facility, with a personal and administrative panel in charge of emiting tributary documentation."
authors = ["Sebastian Salinas <seba.salinas.delrio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "^1.2.2"
jwt = "^1.3.1"
bcrypt = "^3.2.2"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.39"
SQLAlchemy-Utils = "^0.38.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.1"
Flask-Migrate = "^3.1.0"
lxml = "^4.9.1"
xmlsec = "^1.3.12"
pycryptodome = "^3.15.0"
reportlab = "^3.6.11"
pdf417 = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-regressions = "^2.3.1"
pylint = "^2.14.4"
coverage = "^6.4.1"
pylint-flask = "^0.6"
pylint-flask-sqlalchemy = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
